@@ -1103,6 +1103,7 @@ public class PluginJAR
 			{
 				Log.log(Log.ERROR,this,io);
 			}
+			removePluginCache();
 		}
 	} //}}}
 
@@ -1471,6 +1472,13 @@ public class PluginJAR
 		uninit(false);
 		// but we want properties to hang around
 		jEdit.addPluginProps(properties);
+	} //}}}
+
+	//{{{ removePluginCache() method
+	private void removePluginCache()
+	{
+		if(cachePath != null)
+			new File(cachePath).delete();
 	} //}}}
 
 	//}}}
